change handler and template
> remove path to redirect
> add unit test to index
> fix back_button to back correctly to index

--- a/templates/back_button.html
+++ b/templates/back_button.html
@@ -1,6 +1,6 @@
 {{define "back-button"}}
 	<br>
-	<a class="btn btn-outline-dark btn-lg" href="/" role="button">
+	<a class="btn btn-outline-dark btn-lg" href="/index" role="button">
 	<i class="bi bi-chevron-left"> Back</i>
 	</a>
 	<br><br>
